corrección de enlaces redes

--- a/Encriptador.html
+++ b/Encriptador.html
@@ -47,7 +47,7 @@
           <br>
           <p>Create by  Guillermo_perez | Oracle Next Education && Alura LATAM <br>
           <a href="https://www.linkedin.com/in/guillermo-perez-dev"><img src="imagenes/linkedin_logo.png" width="20" height="20"> </a>
-               <img src="imagenes/github_logo.png" width="60" height="20">
+          <a href="https://github.com/zegnorf"><img src="imagenes/github_logo.png" width="60" height="20"></a>
           </p>
      </footer>
      
